--- a/book.html
+++ b/book.html
@@ -143,7 +143,26 @@ Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
 To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha or ab tera upar essay likhne tk ki ki baat
 Pata nai tune kya socha ke msg kiya tha 😂 .......
       </div>
-
+<div class="page cover-front" onclick="movePage(this, 10)"></div>
+      <div class="page text-page" onclick="movePage(this, 11)">
+        Our bond getting stronger day by day ❤️ we don't  feel hesitation  in saying something to each other 😜
+Tu pata mera liya ragistan ki ek uss bond ki Tarah hai jisse kabhi mnn nai bharta mai tera se 24 ghante baat or bakwas kr sakte hu😜
+Tu jaan hai meri motu lala 🤗😁
+ Kucha shayri tera liya 😌
+Ki aarj kiya hai.......
+Khuda ke ghar se kuch gadhe yu farar ho gaya....
+Kuch pakde gaya 🙃
+Kuch hamare yrr ho gaya 😂
+Oye mote 😁😁 suna hai bohut najuk hai tu sui lage to uii karta hai 😂
+Tu jo rutha to mukka padega 👊
+Tu jo badal to Latha padegi 🦶
+Tu chup hai to sb shant lagata hai🤐☹️ 
+Tera bina mera kon rahega 🙈💗
+Tuhe motu 👀 tu he dhakkan 🤩
+Tu he gadha 😬 tu he sb kuch ❤️
+Tera bina bekar hu mai 😁
+Teri chasmish hu mai 🤭
+      </div>
     </div>
 
     
