--- a/book.html
+++ b/book.html
@@ -143,7 +143,10 @@ Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
 To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha or ab tera upar essay likhne tk ki ki baat
 Pata nai tune kya socha ke msg kiya tha 😂 .......
         <div class="page text-page">
-  <img src="file-C42pBLVKFZu73ri6iY44n9.webp" alt="Full Page Image" style="width: 100%; height: 50%; object-fit: cover;">
+  <div class="page text-page">
+  <p>Your text content here...</p>
+  <img src="file-C42pBLVKFZu73ri6iY44n9.webp" alt="Bottom Image" style="width: 100%; height: auto; position: absolute; bottom: 0; left: 0;">
+  </div>
         </div>
       </div>
 <div class="page cover-front" onclick="movePage(this, 10)"></div>
