--- a/book.html
+++ b/book.html
@@ -145,7 +145,7 @@ Pata nai tune kya socha ke msg kiya tha 😂 .......
         <div class="page text-page">
   <div class="page text-page">
   <p>Your text content here...</p>
-  <img src="file-C42pBLVKFZu73ri6iY44n9.webp" alt="Bottom Image" style="width: 100%; height: auto; position: absolute; bottom: 0; left: 0;">
+ <img src="file-C42pBLVKFZu73ri6iY44n9.webp" alt="Bottom Image" width="360" height="215" style="display: block; margin: auto;">
   </div>
         </div>
       </div>
