--- a/book.html
+++ b/book.html
@@ -137,20 +137,16 @@
       </div>
       <div class="page cover-front" onclick="movePage(this, 10)"></div>
       <div class="page text-page" onclick="movePage(this, 11)">
-        Hey motu 👀 this is for you ❤️
+     <p></p>   Hey motu 👀 this is for you ❤️
  Ek ladka jo puri tarh pgl hai 🤧
 Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
 To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha or ab tera upar essay likhne tk ki ki baat
 Pata nai tune kya socha ke msg kiya tha 😂 .......
-        <div class="page text-page">
-  <div class="page text-page">
-  <p>Your text content here...</p>
- <img src="file-C42pBLVKFZu73ri6iY44n9.webp" alt="Bottom Image" width="360" height="215" style="display: block; margin: auto;">
-  </div>
-        </div>
+        <img src="file-C42pBLVKFZu73ri6iY44n9.webp" width="260" height="220" />
+      </p>
       </div>
-<div class="page cover-front" onclick="movePage(this, 10)"></div>
-      <div class="page text-page" onclick="movePage(this, 11)">
+<div class="page cover-front" onclick="movePage(this, 12)"></div>
+      <div class="page text-page" onclick="movePage(this, 13)">
         Our bond getting stronger day by day ❤️ we don't  feel hesitation  in saying something to each other 😜
 Tu pata mera liya ragistan ki ek uss bond ki Tarah hai jisse kabhi mnn nai bharta mai tera se 24 ghante baat or bakwas kr sakte hu😜
 Tu jaan hai meri motu lala 🤗😁
