--- a/book.html
+++ b/book.html
@@ -70,6 +70,8 @@
           teri muskan best hai and hannnnn i Love u <br>
           again <br>
           i love u 😭🤞💖
+          <img src="e968a0ecb7a4ba3101b0e2df6aa8819c.gif" width="360" height="300" />
+   
         </p>
        
         
@@ -142,12 +144,12 @@
 Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
 To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha or ab tera upar essay likhne tk ki ki baat
 Pata nai tune kya socha ke msg kiya tha 😂 .......
-        <img src="file-C42pBLVKFZu73ri6iY44n9.webp" width="260" height="220" />
+        <img src="file-C42pBLVKFZu73ri6iY44n9.webp" width="360" height="400" />
       </p>
       </div>
 <div class="page cover-front" onclick="movePage(this, 12)"></div>
       <div class="page text-page" onclick="movePage(this, 13)">
-        Our bond getting stronger day by day ❤️ we don't  feel hesitation  in saying something to each other 😜
+      <p>   Our bond getting stronger day by day ❤️ we don't  feel hesitation  in saying something to each other 😜
 Tu pata mera liya ragistan ki ek uss bond ki Tarah hai jisse kabhi mnn nai bharta mai tera se 24 ghante baat or bakwas kr sakte hu😜
 Tu jaan hai meri motu lala 🤗😁
  Kucha shayri tera liya 😌
@@ -164,6 +166,7 @@ Tuhe motu 👀 tu he dhakkan 🤩
 Tu he gadha 😬 tu he sb kuch ❤️
 Tera bina bekar hu mai 😁
 Teri chasmish hu mai 🤭
+   <img src="spiderman-gwen-stacy.gif" width="350" height="350" />
       </div>
     </div>
 
