--- a/book.html
+++ b/book.html
@@ -128,13 +128,17 @@
 
         </p>
         <p>
-          pta hai juhi❤️ mai aisa ladka nhi tha, <br>
-          tujhe bhi pta hai mujhe pharak nhi padta kon aata hai or kon jata hai, <br>
-          meri jindagi se mgr pta nhi kyu Tujhse pharak padne laga or bht jyada padne laga.
-          mai jyada to nhi jaanta mgr itta jaanta hu ki nhi reh skta mai tere bina ab,
-          tune uss din keh diya ki meri shaadi kahi or hogyi to kya mai tujhe bhul jaaunga ????
-          pta hai mai ab tere bina kisi or ka ho hi nhi skta or rojj yahi sochta hu ki meri muskan ne aisa 
-          soch bhi kaise liya😭
+          𝕻𝖆𝖙𝖆 𝖍𝖆𝖎 𝕵𝖚𝖍𝖎❤️, 𝖒𝖆𝖎 𝖕𝖊𝖍𝖑𝖊 𝖆𝖎𝖘𝖆 𝖑𝖆𝖉𝖐𝖆 𝖓𝖆𝖍𝖎 𝖙𝖍𝖆...
+𝕸𝖚𝖏𝖍𝖊 𝖐𝖆𝖇𝖍𝖎 𝖐𝖎𝖘𝖎 𝖐𝖊 𝖆𝖆𝖓𝖊 𝖞𝖆 𝖏𝖆𝖆𝖓𝖊 𝖘𝖊 𝖋𝖆𝖗𝖆𝖐 𝖓𝖆𝖍𝖎 𝖕𝖆𝖉𝖙𝖆 𝖙𝖍𝖆, 𝖒𝖊𝖗𝖎 𝖟𝖎𝖓𝖉𝖆𝖌𝖎 𝖒𝖊𝖗𝖎 𝖍𝖎 𝖙𝖍𝖎... 𝖕𝖆𝖗 𝖙𝖚𝖒 𝖆𝖆𝖞𝖎 𝖆𝖚𝖗 𝖘𝖆𝖇 𝖐𝖚𝖈𝖍 𝖇𝖆𝖉𝖆𝖑 𝖌𝖆𝖞𝖆. 🥺💖
+
+𝕻𝖆𝖙𝖆 𝖓𝖆𝖍𝖎 𝖐𝖆𝖎𝖘𝖊, 𝖐𝖆𝖇, 𝖆𝖚𝖗 𝖐𝖞𝖚 𝖙𝖚𝖒 𝖒𝖊𝖗𝖎 𝖆𝖆𝖉𝖆𝖙 𝖇𝖆𝖓 𝖌𝖆𝖞𝖎... 𝖎𝖙𝖓𝖎 𝖌𝖊𝖍𝖗𝖎 𝖐𝖎 𝖆𝖇 𝖙𝖚𝖒𝖍𝖆𝖗𝖊 𝖇𝖎𝖓𝖆 𝖊𝖐 𝖕𝖆𝖑 𝖇𝖍𝖎 𝖘𝖔𝖈𝖍𝖓𝖆 𝖒𝖚𝖘𝖍𝖐𝖎𝖑 𝖍𝖆𝖎. 🫀✨ 𝕿𝖚𝖒 𝖒𝖊𝖗𝖎 𝖉𝖚𝖓𝖎𝖞𝖆 𝖇𝖆𝖓 𝖌𝖆𝖞𝖎 𝖍𝖔, 𝖒𝖊𝖗𝖆 𝖘𝖆𝖇 𝖐𝖚𝖈𝖍.
+
+𝕬𝖚𝖗 𝖚𝖘𝖘 𝖉𝖎𝖓 𝖏𝖆𝖇 𝖙𝖚𝖒𝖓𝖊 𝖇𝖔𝖑𝖆 "𝖆𝖌𝖆𝖗 𝖒𝖊𝖗𝖎 𝖘𝖍𝖆𝖆𝖉𝖎 𝖐𝖆𝖍𝖎𝖓 𝖆𝖚𝖗 𝖍𝖔 𝖌𝖆𝖞𝖎 𝖙𝖔?", 𝖚𝖘 𝖕𝖆𝖑 𝖒𝖊𝖗𝖎 𝖘𝖆𝖆𝖗𝖎 𝖉𝖚𝖓𝖎𝖞𝖆 𝖍𝖎𝖑 𝖌𝖆𝖞𝖎 𝖙𝖍𝖎... 💔
+𝕵𝖚𝖍𝖎, 𝖒𝖆𝖎 𝖘𝖎𝖗𝖋 𝖙𝖚𝖒𝖍𝖆𝖗𝖆 𝖍𝖔𝖔𝖓, 𝖘𝖎𝖗𝖋 𝖙𝖚𝖒𝖍𝖆𝖗𝖆 𝖗𝖆𝖍𝖚𝖓𝖌𝖆, 𝖈𝖍𝖆𝖍𝖊 𝖐𝖔𝖎 𝖇𝖍𝖎 𝖍𝖆𝖑𝖆𝖆𝖙 𝖍𝖔! 💕 𝕸𝖚𝖏𝖍𝖘𝖊 𝖞𝖊𝖍 𝖒𝖆𝖙 𝖕𝖚𝖈𝖍𝖓𝖆 𝖐𝖎 𝖒𝖆𝖎 𝖙𝖚𝖒𝖍𝖊 𝖇𝖍𝖔𝖔𝖑 𝖏𝖆𝖚𝖓𝖌𝖆 𝖞𝖆 𝖓𝖆𝖍𝖎, 𝖐𝖞𝖚𝖓𝖐𝖎 𝖘𝖆𝖈𝖍 𝖙𝖔 𝖞𝖊𝖍 𝖍𝖆𝖎—𝖙𝖚𝖒𝖘𝖊 𝖉𝖔𝖔𝖗 𝖏𝖆𝖆𝖐𝖊 𝖇𝖍𝖎, 𝖒𝖆𝖎 𝖘𝖎𝖗𝖋 𝖙𝖚𝖒𝖍𝖊 𝖍𝖎 𝖏𝖊𝖊𝖚𝖓𝖌𝖆! 🥹🥺
+
+𝕸𝖊𝖗𝖎 𝖐𝖎𝖘𝖍𝖒𝖎𝖘𝖍, 𝖒𝖊𝖗𝖎 𝖒𝖔𝖙𝖐𝖎, 𝖒𝖊𝖗𝖎 𝖏𝖆𝖆𝖓, 𝖒𝖊𝖗𝖎 𝖉𝖚𝖓𝖎𝖞𝖆—𝖙𝖚𝖒𝖘𝖊 𝖇𝖊𝖍𝖙𝖆𝖗 𝖐𝖚𝖈𝖍 𝖓𝖆𝖍𝖎! 😭💖
+
+
         </p>
       </div>
       <div class="page cover-front" onclick="movePage(this, 10)"></div>
