--- a/book.html
+++ b/book.html
@@ -64,7 +64,7 @@
 
         <p>
           meri life ka sbse best din pta hai konsa tha!!???? <br>
-          mai btata hu 8 november 😭 pta hai kyuuuu??? kyuki uss din <br>
+          mai btata  jis din <br>
           meri or teri bht jyada baat hui hamne pehli baar itti der <br>
           baat ki 🤞 and i'm so blessed to have a partner like u 😭 <br>
           teri muskan best hai and hannnnn i Love u <br>
@@ -96,11 +96,11 @@
     Tu hi meri har ek aas ban chuki hai. 💖<br><br>
     
     Toh rahegi na mere saath sada? 🤞<br>
-    Rakhegi na mujhe jinda apni har ek ada? 😭❤️
+    Rakhegi na mujhe jinda apni har ek ada me? 😭❤️
         </p>
         <p>
          ab bta tu tareef krne ko bolti hai mai to tere <br>
-         mere pyaar pe picture bana du, <br>tu bss meri hoke to reh meri jaan ,<br>
+         mere pyaar pe picture bana du, <br>tu bss meri hoke to dekh ,<br>
          meri jindagi ki movie mai tujhe apni heroine hi bana du😘
         </p>
         <p>
@@ -170,7 +170,7 @@ Tuhe motu 👀 tu he dhakkan 🤩
 Tu he gadha 😬 tu he sb kuch ❤️
 Tera bina bekar hu mai 😁
 Teri chasmish hu mai 🤭
-   <img src="spiderman-gwen-stacy.gif" width="350" height="350" />
+   <img src="spiderman-gwen-stacy.gif" width="350" height="280" />
       </div>
     </div>
 
