--- a/book.html
+++ b/book.html
@@ -172,6 +172,15 @@ Tera bina bekar hu mai 😁
 Teri chasmish hu mai 🤭
    <img src="spiderman-gwen-stacy.gif" width="350" height="280" />
       </div>
+      <div class="page cover-front" onclick="movePage(this, 12)"></div>
+      <div class="page text-page" onclick="movePage(this, 13)">
+<p>Mai staro se baate to kr nai sakte na 👀😂 Q ki dimag hila hua nai mera 😁 nai to pucha leti una sitaro se ki 🙃 ye chamakta sitara jo uljhi uljhi bate krta hai ya tum ko kaha mila 😚 
+Tu hoga najuk handsome patla gora but mera liya tu motu lala hai kaluva 💗🙈 love you mote 😁
+Chal chal muskura mt ab ye sb padh ke 😂😂 gadha kahi ka
+
+</p>
+      </div>
+        
     </div>
 
     
