--- a/book.html
+++ b/book.html
@@ -177,14 +177,34 @@ Teri chasmish hu mai 🤭
 <p>Mai staro se baate to kr nai sakte na 👀😂 Q ki dimag hila hua nai mera 😁 nai to pucha leti una sitaro se ki 🙃 ye chamakta sitara jo uljhi uljhi bate krta hai ya tum ko kaha mila 😚 
 Tu hoga najuk handsome patla gora but mera liya tu motu lala hai kaluva 💗🙈 love you mote 😁
 Chal chal muskura mt ab ye sb padh ke 😂😂 gadha kahi ka
-<img src="tumblr_mstmwkfyrN1s102j5o1_250.gif" width="360" height="500" />
+<img src="tumblr_mstmwkfyrN1s102j5o1_250.gif" width="360" height="400" />
 </p>
       </div>
     <div class="page cover-front" onclick="movePage(this, 16)"></div>
-      <div class="page text-page" onclick="movePage(this, 17)">    
+      <div class="page text-page" onclick="movePage(this, 17)">   
+        <p>"Kishmish, from the very first conversation, 
+          you’ve felt like a piece of happiness I didn’t know I was missing.
+          Every chat, every laugh, and every little moment with you has made
+          my days brighter. Today, on this special day, I just want to say what 
+          my heart has been feeling for a while— I love you. Not just because
+          it's Valentine's Day, but because you’ve become someone truly special to me."
+        <img src="young-man-gives-rose-heart-to-girl-5525728.jpg" width="360" height="300" /></p>
+        <p>"I've been wanting to tell you this for a while, 
+          and it feels right today. But more than just saying it,
+          I’d love to know how you feel too. What does your heart say, Kishmish?"
+
+          अगर मेरी किशमिश मुझसे सचमे प्यार 💕 करती है तो आज बोलदे 🥺
+<button onclick="window.location.href='https://www.reduret.com';" 
+        style="background-color: #ff4d6d; color: white; border: none; 
+               padding: 15px 30px; font-size: 18px; border-radius: 10px; 
+               cursor: pointer; box-shadow: 2px 2px 10px rgba(0,0,0,0.2);">
+    Yes, I Love You
+</button>
+          
+        </p>
     </div>
 
-    
+    </div>
     <script src="ashish.js"></script>
   </body>
 </html>
