--- a/book.html
+++ b/book.html
@@ -194,7 +194,7 @@ Chal chal muskura mt ab ye sb padh ke 😂😂 gadha kahi ka
           I’d love to know how you feel too. What does your heart say, Kishmish?"
 
           अगर मेरी किशमिश मुझसे सचमे प्यार 💕 करती है तो आज बोलदे 🥺
-<button onclick="window.location.href='https://www.reduret.com';" 
+<button onclick="window.location.href='https://wa.me/919450524237?text=Yes%20I%20love%20💕%20you%20Nishkarsh%20yes%20I%20do%20love%20😘%20but%20never%20expressed%20but%20today%20is%20special%20day%20today%20our%20first%20Valentine%20Day%20so%20I%20want%20to%20say%20I%20love%20you%20😘%20my%20love%20Nishkarsh';" 
         style="background-color: #ff4d6d; color: white; border: none; 
                padding: 15px 30px; font-size: 18px; border-radius: 10px; 
                cursor: pointer; box-shadow: 2px 2px 10px rgba(0,0,0,0.2);">
