--- a/book.html
+++ b/book.html
@@ -170,7 +170,7 @@ Tuhe motu 👀 tu he dhakkan 🤩
 Tu he gadha 😬 tu he sb kuch ❤️
 Tera bina bekar hu mai 😁
 Teri chasmish hu mai 🤭
-   <img src="spiderman-gwen-stacy.gif" width="350" height="280" />
+   <img src="https://media.tenor.com/UsSmdHlgGH8AAAAM/hug-love-couple.gif" width="350" height="280" />
       </div>
       <div class="page cover-front" onclick="movePage(this, 14)"></div>
       <div class="page text-page" onclick="movePage(this, 15)">
