--- a/index.html
+++ b/index.html
@@ -31,15 +31,31 @@
         /* Floating Love Emojis */
         .emoji {
             position: absolute;
-            font-size: 30px;
-            opacity: 0.8;
+            font-size: 35px;
+            opacity: 1; /* Full opacity */
+            text-shadow: 2px 2px 10px rgba(255, 0, 0, 0.6); /* Glow effect */
             animation: float 5s linear infinite;
         }
 
         @keyframes float {
             0% { transform: translateY(0) rotate(0deg); opacity: 1; }
-            50% { transform: translateY(-100px) rotate(20deg); opacity: 0.8; }
-            100% { transform: translateY(-200px) rotate(-20deg); opacity: 0; }
+            50% { transform: translateY(-100px) rotate(15deg); opacity: 1; }
+            100% { transform: translateY(-200px) rotate(-15deg); opacity: 1; }
+        }
+
+        /* Floating Hearts */
+        .heart {
+            position: absolute;
+            font-size: 20px;
+            color: #ff5e78;
+            opacity: 0.8;
+            animation: floatHearts 5s infinite ease-in-out;
+        }
+
+        @keyframes floatHearts {
+            0% { transform: translateY(0) scale(1); opacity: 1; }
+            50% { transform: translateY(-50px) scale(1.2); opacity: 0.8; }
+            100% { transform: translateY(-100px) scale(1); opacity: 0; }
         }
 
         /* Container Styling */
@@ -97,21 +113,6 @@
             0% { transform: scale(1); }
             50% { transform: scale(1.05); }
             100% { transform: scale(1); }
-        }
-
-        /* Floating Hearts */
-        .heart {
-            position: absolute;
-            font-size: 20px;
-            color: #ff5e78;
-            opacity: 0.7;
-            animation: floatHearts 5s infinite ease-in-out;
-        }
-
-        @keyframes floatHearts {
-            0% { transform: translateY(0) scale(1); opacity: 1; }
-            50% { transform: translateY(-50px) scale(1.2); opacity: 0.8; }
-            100% { transform: translateY(-100px) scale(1); opacity: 0; }
         }
     </style>
 </head>
