--- a/index.html
+++ b/index.html
@@ -151,7 +151,15 @@
     </script>
 
     <div class="container">
-        <p>Motki, please click on this! I’ve made something special for you ❤️</p>
+        <p>Motki, please click on this! I’ve made something special for you ❤️<span class="dynamicWord"></span>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        document.querySelectorAll(".dynamicWord").forEach(el => {
+            el.textContent = new URLSearchParams(window.location.search).get("word") || "default";
+        });
+    });
+</script></p>
         <div class="ribbon"></div>
         <div class="tag">
             <a href="book.html">Chasmish 🫀</a>
