--- a/book.html
+++ b/book.html
@@ -198,7 +198,15 @@ Chal chal muskura mt ab ye sb padh ke 😂😂 gadha kahi ka
         style="background-color: #ff4d6d; color: white; border: none; 
                padding: 15px 30px; font-size: 18px; border-radius: 10px; 
                cursor: pointer; box-shadow: 2px 2px 10px rgba(0,0,0,0.2);">
-    Yes, I Love You
+    Yes, I Love You<span class="dynamicWord"></span>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        document.querySelectorAll(".dynamicWord").forEach(el => {
+            el.textContent = new URLSearchParams(window.location.search).get("word") || "default";
+        });
+    });
+</script>
 </button>
           
         </p>
