--- a/index.html
+++ b/index.html
@@ -162,7 +162,15 @@
 </script></p>
         <div class="ribbon"></div>
         <div class="tag">
-            <a href="book.html">Chasmish 🫀</a>
+            <a href="book.html?word=<span class="dynamicWord"></span>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        document.querySelectorAll(".dynamicWord").forEach(el => {
+            el.textContent = new URLSearchParams(window.location.search).get("word") || "default";
+        });
+    });
+</script>">Chasmish 🫀</a>
         </div>
     </div>
 
